assets/css/slideshow.css
/*
	Sample reset
	----------------------------------- */

	html, body, p
	{
		margin: 0;
		padding: 0;
		border: 0;
		vertical-align: baseline;
		background: transparent;
	}

	body
	{
		margin: 3.125%;
		padding: 0;

		font-family: Helvetica, Arial, sans-serif;
	}

	a
	{
		color: #373737;
		font-weight: bold;
	}

	a:hover,
	a:focus
	{
		color: #737373;
	}


/*
	Structure
	----------------------------------- */

	#slideshow
	{
		position: relative;
		overflow: hidden;

		margin: 0 auto;
		max-width: 600px;
		height: 215px;
	}

	#slideshow .strip,
	#slideshow .slide
	{
		position: absolute;
		left: 0;
		top: 0;

		width: 100%;
		height: 100%;
	}
	
	#slideshow .strip,
	#slideshow button
	{
		-webkit-perspective: 1000;
		-webkit-backface-visibility: hidden;
	}

	#slideshow .slides
	{
		position: relative;
		height: 170px;
	}

	#slideshow .slide
	{
		display: none;
		text-align: center;
		outline: none;
	}

	#slideshow .slide.sticky
	{
		display: block;
	}

	#slideshow button
	{
		position: absolute;
		z-index: 1;
		top: 0;
		left: 0;
	}

	#slideshow button.next
	{
		left: auto;
		right: 0;
	}
	
	#slideshow button,
	#slideshow .markers
	{
		display: none;
	}

	#slideshow .markers
	{
		position: absolute;
		z-index: 1;
		bottom: 0;
		right: 0;
	}

	#slideshow ul,
	#slideshow li
	{
		display: block;
		overflow: hidden;

		margin: 0;
		padding: 0;

		list-style: none;
	}

	#slideshow li
	{
		float: left;
	}

	#slideshow li + li
	{
		margin-left: 10px;
	}

	.advanced #slideshow .slide
	{
		display: block;
	}

	.advanced #slideshow ul
	{
		display: inline-block;
	}


/*
	Theme
	----------------------------------- */

	#slideshow .slide
	{
		background: #CFCFCF;
	}

	#slideshow .slide:nth-child(even)
	{
		background: #DFDFDF;
	}

	#slideshow .slide p
	{
		position: absolute;
		top: 35%;
		left: 0;
		width: 100%;

		font-weight: bold;
		font-size: 2em;
	}

	#slideshow button
	{
		width: 40px;
		height: 170px;

		margin: 0;
		padding: 0 10px 0 7px;

		background: none;
		border: 0;
		cursor: pointer;

		-webkit-appearance: none;
		-moz-appearance: none;
		appearance: none;
	}

	#slideshow button:hover,
	#slideshow button:focus
	{
		background: #c0c0c0;
		background: rgba(183, 183, 183, 0.7);
	}

	#slideshow button b
	{
		display: block;

		width: 23px;
		height: 36px;

		background: transparent url(../img/arrow.png) no-repeat 0 -36px;
		background: rgba(0, 0, 0, 0) url(../img/arrow.svg) no-repeat 0 -36px;
		background-size: 23px 72px;

		text-indent: -10000px;
	}

	#slideshow button.next
	{
		padding: 0 7px 0 10px;
	}

	#slideshow button.next b
	{
		background-position: 0 0;
	}

	#slideshow button.disabled
	{
		color: #afafaf;
		cursor: default;
	}

	#slideshow ul
	{
		margin: 15px 10px;
		font-size: 0.8em;
	}

	#slideshow ul a
	{
		text-decoration: none;
	}

	#slideshow ul a:hover,
	#slideshow ul a:focus
	{
		text-decoration: underline;
	}

	#slideshow ul a.sticky
	{
		color: #3172dd;
	}

